Chip: 00:02.0 VGA compatible controller: Intel Corporation Mobile 4 Series Chipset Integrated Graphics Controller (rev 07) Kernel: 2.6.32 as patched by Debian (many DRM fixes from 2.6.33.y, etc.) Server: 1.7.7 as patched by Debian With either 2.12.0+legacy branch or master (as of 6304cb0) I'm hitting the following assert: ./uxa/uxa-glyphs.c:986 assert (uxa_pixmap_is_offscreen(src_pixmap)); To reproduce, just start the 'sm' program (http://www.joachim-breitner.de/projects#screen-message) with a random string, and exit it (hitting 'q').
Created attachment 37655 [details] bt full
commit 68a5ad497b557ab9e8bff301098ea78c84d385a2 Author: Chris Wilson <chris@chris-wilson.co.uk> Date: Wed Aug 25 14:59:04 2010 +0100 uxa: Fallback if faced with large A1 glyphs. Rather than assert, we should fixup the use of large A1 glyphs. However, the simplest approach is to simply fallback to s/w. Fixes: Bug 29430 - [UXA] Crash due assert (uxa_pixmap_is_offscreen(src_pixmap)); https://bugs.freedesktop.org/show_bug.cgi?id=29430 Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.